<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="@string/ajout"
        android:textSize="25sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/joueurs"
        android:id="@+id/spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:text="@string/constitution"
        android:textSize="25sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:entries="@array/joueurs"
        android:id="@+id/listView"
        android:layout_weight="0.46" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creerEquipe"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>